added info from github classroom repository

--- a/index.html
+++ b/index.html
@@ -1,99 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Bakery Timeline</title>
-</head>
-<body>
-    <div class="container">
-        <h1>TITLE</h1>
-        <div class="timeline">
-            ::before
-            <div class="timeline-item1">
-                <div class="timeline-circle">
-                    <span>10th April 2019</span>
-                </div>
-                <h2>"I love cake jelly-o"</h2>
-                <p>"I love tiramisu cheesecake...</p>
-                <button data-index="0">"Gimme, Gimme MORE" (info)</button>
-            </div>
-            <div class="timeline-item2">
-                <div class="timeline-circle2">
-                    <span>"11th May 2019"</span>
-                </div>
-                <h2>"Ice cream candy...</h2>
-                <p>"Danish marshmallow marshmallow bonbon...</p>
-                <button data-index="1">Gimme, Gimme MORE (info)</button>
-            </div>
-            <div class="timeline-item3">
-                <div class="timeline-circle3">
-                    <span>"12th June 2019"</span>
-                </div>
-                <h2>"Tootsie roll fruitcake</h2>
-                <p>"Halvah candy souffle. Cotton candy..."</p>
-                <button data-index="2">Gimme, Gimme More (info)</button>
-            </div>
-            <div class="timeline-item4">
-                <div class="timeline-circle4">
-                    <span>"13th July 2019"</span>
-                </div>
-                <h2>"I love souffle"</h2>
-                <p>Ice cream candy lemon drops. Halvah donut...</p>
-                <button data-index="3">Gimme, Gimme MORE (info)</button>
-            </div>
-            <div class="timeline-item5">
-                <div class="timeline-circle">
-                    <span>"14th August 2019"</span>
-                </div>
-                <h2>"I love lollipops"</h2>
-                <p>Ice cream candy lemon drops. Halvah donut...</p>
-                <button data-index="4">Gimme, Gimme MORE (info)</button>
-            </div>
-            <div class="timeline-item6">
-                <div class="timeline-circle6">
-                    <span>"15th March 2020</span>
-                </div>
-                <h2>"Liquorice chocolate bar tart cheesecake</h2>
-                <p>"Ice cream candy lemon drops...</p>
-                <button data-index="5">Gimme, Gimme MORE (info)</button>
-            </div>
-            <div class="timeline-item7">
-                <div class="timeline-circle7">
-                    <span>"16th April 2020</span>
-                </div>
-                <h2>"Ice cream candy lemon drops</h2>
-                <p>"Ice cream candy lemon drops...</p>
-                <button data-index="6">Gimme, Gimme MORE (info)</button>
-            </div>
-            <div class="timeline-item8">
-                <div class="timeline-circle8">
-                    <span>"17th May 2020</span>
-                </div>
-                <h2>"Ice cream candy lemon drops</h2>
-                <p>"Ice cream candy lemon drops. Halvah donut...</p>
-                <button data-index="7">Gimme, Gimme MORE (info)</button>
-            </div>
-            <div class="timeline-item9">
-                <div class="timeline-circle9">
-                    <span>"18th June 2020</span>
-                </div>
-                <h2>"Ice cream candy lemon drops"</h2>
-                <p>"Ice cream candy lemon drops. Halvah donut...</p>
-                <button data-index="8">Gimme, Gimme MORE (info)</button>
-            </div>
-            <div class="timeline=item10">
-                <div class="timeline-circle10">
-                    <span>"19th July 2020</span>
-                </div>
-                <h2>"Ice cream candy lemon drops"</h2>
-                <p>"Ice cream candy lemon drops...</p>
-                <button data-index="9">Gimme, Gimme MORE (info)</button>
-            </div>
-        </div>
-    </div> 
-    <script type="module" src="index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Timeline Starter</title>
+  </head>
+  <body>
+    <div class="timeline">
+
+    </div>
+    <script type="module" src="js/index.js"></script>
+  </body>
 </html>
